# basic-text

./: .gitattributes  COPYRIGHT  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
docs/: Background.md  BasicText.md  Formats.md  Introduction.md  NFC.md  RestrictedText.md  SUMMARY.md  Terminal.md  Unicode.md  background.md  basic-text.md  book.toml  formats.md  nfc.md  plain-text.md  restricted-text.md  text.md  utf-8.md
examples/: io-cat.rs  literals.rs  nfc-cat.rs  nfc-quick-cat.rs  ssnfc-cat.rs  text-cat.rs  utf8-cat.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: text.rs  text_reader.rs  utf8_reader.rs
internals/: COPYRIGHT  Cargo.toml
internals/src/: categorize.rs  check.rs  isolate_unassigned.rs  lib.rs  pre_normalization.rs  replace.rs  replace_selected.rs  text_utils.rs  unicode.rs
literals/: COPYRIGHT  Cargo.toml
literals/src/: lib.rs
restricted-text/: CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs
restricted-text/src/: copy.rs  lib.rs  read_restricted.rs  restricted_duplexer.rs  restricted_input.rs  restricted_output.rs  restricted_reader.rs  restricted_string.rs  restricted_writer.rs  write_restricted.rs
samples/: basic-text-example.txt  basic-text-invalid-converted.txt  basic-text-invalid.txt
src/: buf_read_text.rs  categorize.rs  copy.rs  copy_str.rs  lib.rs  no_forbidden_characters.rs  partial_eq.rs  rc_char_queue.rs  read_str.rs  read_text.rs  replace_selected.rs  text_duplexer.rs  text_input.rs  text_interactor.rs  text_output.rs  text_reader.rs  text_reader_impl.rs  text_reader_writer.rs  text_string.rs  text_substring.rs  text_utils.rs  text_writer.rs  text_writer_impl.rs  unicode.rs  utf8_input.rs  utf8_interactor.rs  utf8_output.rs  utf8_reader.rs  utf8_reader_impl.rs  utf8_reader_writer.rs  utf8_writer.rs  utf8_writer_impl.rs  write_str.rs  write_text.rs  write_wrapper.rs
tests/: basic-text-string.rs  buf_read_text.rs  disallowed_codepoints.rs  disallowed_scalar_values.rs  literals.rs  samples.rs  string.rs  text-input.rs  text-output.rs  unicode-version.rs
