[package]
name = "basic-text"
version = "0.7.1-alpha.0"
description = "Basic Text strings and I/O streams"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["stream", "text"]
categories = ["os", "text-processing"]
repository = "https://github.com/sunfishcode/basic-text"
edition = "2018"
exclude = ["/.github"]

[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
arbitrary = { version = "1.0.0", optional = true }
basic-text-internals = { path = "internals", version = "^0.7.1-alpha.0"}
basic-text-literals = { path = "literals", version = "^0.7.1-alpha.0"}
duplex = "0.8.0"
layered-io = "0.9.0"
terminal-io = { version = "0.8.0", optional = true }
io-extras = "0.11.2"
utf8-io = { version = "0.8.0", features = ["layered-io"] }
io-lifetimes = { version = "0.3.3", default-features = false }

[dev-dependencies]
anyhow = "1.0.37"

[workspace]
members = [
    "internals",
    "literals",
    "restricted-text",
]
