[package]
name = "basic-text"
version = "0.15.0"
description = "Basic Text strings and I/O streams"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["stream", "text"]
categories = ["os", "text-processing"]
repository = "https://github.com/sunfishcode/basic-text"
edition = "2018"
exclude = ["/."]

[dependencies]
arbitrary = { version = "1.0.0", optional = true }
basic-text-internals = { path = "internals", version = "^0.15.0" }
basic-text-literals = { path = "literals", version = "^0.15.0" }
duplex = "0.15.0"
layered-io = "0.20.0"
terminal-io = { version = "0.17.0", optional = true }
io-extras = "0.17.0"
utf8-io = { version = "0.16.0", features = ["layered-io"] }
io-lifetimes = { version = "1.0.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.37"

[workspace]
members = [
    "internals",
    "literals",
    "restricted-text",
]
