[package]
name = "basic-text-fuzz"
version = "0.0.0"
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.0"
basic-text = { path = ".." }
layered-io = "0.13.0"
unicode-normalization = "0.1.17"
utf8-io = { version = "0.12.0", features = ["layered-io"] }

[[bin]]
name = "text"
path = "fuzz_targets/text.rs"
test = false
doc = false

# Work around https://github.com/rust-lang/cargo/issues/8338
[workspace]
