[package]
name = "basic-text-internals"
version = "0.11.1-alpha.0"
description = "Basic Text string literal implementation details"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/basic-text"

[dependencies]
unicode-normalization = "0.1.19"
thiserror = "1.0.24"

[badges]
maintenance = { status = "actively-developed" }
