[package]
name = "basic-text-literals"
version = "0.9.1"
description = "Basic Text string literal macro for basic-text"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/basic-text"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = "1.0.72"
basic-text-internals = { path = "../internals", version = "^0.9.1-alpha.0"}

[badges]
maintenance = { status = "actively-developed" }
