[package]
name = "restricted-text"
version = "0.6.0"
description = "Restricted Text strings and I/O streams"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["stream", "text"]
categories = ["os", "text-processing"]
repository = "https://github.com/sunfishcode/basic-text"
edition = "2018"
publish = false

[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
basic-text = { path = "..", version = "^0.6.0"}
duplex = "0.6.0"
layered-io = "0.7.0"
unicode-normalization = "0.1.17"
unsafe-io = "0.8.2"
utf8-io = { version = "0.5.0", features = ["layered-io"] }

[badges]
maintenance = { status = "actively-developed" }
