[package]
name = "restricted-text"
version = "0.9.1"
description = "Restricted Text strings and I/O streams"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["stream", "text"]
categories = ["os", "text-processing"]
repository = "https://github.com/sunfishcode/basic-text"
edition = "2018"
publish = false

[dependencies]
basic-text = { path = "..", version = "^0.9.1-alpha.0"}
duplex = "0.9.0"
layered-io = "0.10.0"
unicode-normalization = "0.1.17"
io-extras = "0.12.0"
utf8-io = { version = "0.9.0", features = ["layered-io"] }
